--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,15 @@
 [submodule ".vim/bundle/vim-nerdtree-tabs"]
 	path = .vim/bundle/vim-nerdtree-tabs
 	url = https://github.com/jistr/vim-nerdtree-tabs.git
+[submodule ".vim/bundle/pyflakes"]
+	path = .vim/bundle/pyflakes
+	url = https://github.com/kevinw/pyflakes.git
+[submodule ".vim/bundle/pyflakes-vim"]
+	path = .vim/bundle/pyflakes-vim
+	url = https://github.com/kevinw/pyflakes-vim.git
+[submodule ".vim/bundle/vcscommand"]
+	path = .vim/bundle/vcscommand
+	url = https://github.com/vim-scripts/vcscommand.vim.git
+[submodule ".vim/bundle/colorsel.vim"]
+	path = .vim/bundle/colorsel.vim
+	url = https://github.com/vim-scripts/colorsel.vim.git
