--- a/.gitmodules
+++ b/.gitmodules
@@ -12,13 +12,13 @@
 	url = https://github.com/Lokaltog/vim-powerline.git
 [submodule ".vim/bundle/snipmate.vim"]
 	path = .vim/bundle/snipmate.vim
-	url = git://github.com/msanders/snipmate.vim.git
+	url = https://github.com/msanders/snipmate.vim.git
 [submodule ".vim/bundle/c.vim"]
 	path = .vim/bundle/c.vim
-	url = git://github.com/vim-scripts/c.vim.git
+	url = https://github.com/vim-scripts/c.vim.git
 [submodule ".vim/bundle/supertab"]
 	path = .vim/bundle/supertab
-	url = git://github.com/ervandew/supertab.git
+	url = https://github.com/ervandew/supertab.git
 [submodule ".vim/bundle/vim-nerdtree-tabs"]
 	path = .vim/bundle/vim-nerdtree-tabs
 	url = https://github.com/jistr/vim-nerdtree-tabs.git
