--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule ".vim/bundle/zencoding-vim"]
 	path = .vim/bundle/zencoding-vim
 	url = https://github.com/mattn/zencoding-vim.git
+[submodule ".vim/bundle/dwm.vim"]
+	path = .vim/bundle/dwm.vim
+	url = https://github.com/spolu/dwm.vim.git
